<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:background="@drawable/gradient_blue"
                android:layout_height="match_parent">

    <ImageView
            android:id="@+id/iv_logo"
            android:layout_above="@+id/et_user"
            android:layout_centerHorizontal="true"
            android:tint="@android:color/white"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/gambar_logo"/>

    <EditText
            android:inputType="text"
            android:textSize="14sp"
            android:layout_marginTop="100dp"
            android:id="@+id/et_user"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:padding="12dp"
            android:hint="@string/email_or_phone"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute"/>

    <EditText
            android:textSize="14sp"
            android:hint="@string/password"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:layout_below="@+id/et_user"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:autofillHints="@string/password"
            tools:ignore="UnusedAttribute"
            android:inputType="textPassword"/>

    <Button
            android:onClick="doLogin"
            android:background="@color/navy"
            android:layout_below="@+id/et_password"
            android:id="@+id/btn_login"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:text="@string/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvFooter"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/sign_up_for_facebook"
            android:layout_marginBottom="30dp"
            tools:ignore="RelativeOverlap"/>

    <ImageView
            android:padding="5dp"
            android:background="@color/navy"
            android:tint="@android:color/white"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/question_mark"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="25dp"
            android:contentDescription="@string/question_mark"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"/>

</RelativeLayout>